# netprocess

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  README.md  get-poetry.py  mkdocs.yml  pyproject.toml
.github/workflows/: checks.yaml
docs/: conf.py  index.md  index.rst
netprocess/: __init__.py  jax_utils.py  messages.py  networks.py  primitives.py  seir.py  utils.py
netprocess/data/: data_utils.py  network.py  network_stats.py  process_run.py
netprocess/epi/: __init__.py  seir.py
netprocess/epidemics/: __init__.py  compartmental.py  seir.py
netprocess/games/: __init__.py  games.py  policies.py
netprocess/network/: __init__.py  network.py  stats.py
netprocess/network_process/: __init__.py  common_ops.py  compartmental.py  operation.py  process.py  state.py  tracing.py
netprocess/network_process/operations/: __init__.py  base.py  common.py  compartmental.py  games.py
netprocess/networks/: network.py
netprocess/operations/: __init__.py  base.py  common.py
netprocess/process/: __init__.py  process.py  records.py  state.py  tracing.py
netprocess/scripts/: __init__.py  bench.py  cli.py  epi_demo.py  gen_graphs.py  r_graph.py  run_sir.py  simulation.py
netprocess/utils/: __init__.py  array_tree.py  file_utils.py  jax_utils.py  key_or_value.py  prop_tree.py  types.py  utils.py
notebooks/: RegretMatchingSmall.ipynb  SmallGames.ipynb
tests/: conftest.py  test_array_tree.py  test_basic.py  test_jax_utils.py  test_messages.py  test_networks.py  test_ops.py  test_primitives.py  test_process.py  test_seir.py  test_utils.py
tests/epi/: test_seir.py
tests/epidemics/: test_seir.py
tests/games/: test_games.py
tests/network_process/: test_ops.py  test_process.py
