[tool.poetry]
name = "netprocess"
version = "0.1.0"
description = ""
authors = ["Tomas Gavenciak <gavento@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
numpy = "^1.18.2"
pandas = "^1.0.3"
unidecode = "^1.1.1"
plotly = "^4.6.0"
tqdm = "^4.45.0"
colorlog = "^4.1.0"
networkx = "^2.4"
jax = "^0.1.75"
jaxlib = "^0.1.52"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
pre-commit = "^2.2.0"
flake8 = "^3.8.3"
ipython = "^7.15.0"

[tool.black]
target-version = ['py36']

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
