[tool.poetry]
name = "netprocess"
version = "0.4.0"
description = "Framework for processes on complex networks: epidemis, game theory, percolation, Ising models. Built on JAX for speed and differentiability."
authors = ["Tomas Gavenciak <gavento@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.10"
numpy = "^1.18.2"
pandas = "^1.0.3"
unidecode = "^1.1.1"
plotly = "^4.6.0"
tqdm = "^4.45.0"
colorlog = "^4.1.0"
networkx = "^2.4"
jax = "^0.2"
jaxlib = "^0.1"
attrs = "^20.3.0"
filelock = "^3.0.12"
pyzstd = "^0.15.0"
powerlaw = "^1.4.6"
hdf5plugin = "^3.2.0"
h5py = "^3.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^5.4.1"
black = "20.8b1"
flake8 = "^3.8.3"
ipython = "^7.15.0"
myst-parser = "^0.15.2"
Sphinx = "^4.3.1"

[tool.black]
target-version = ['py36']

[tool.poetry.scripts]
netprocess = 'netprocess.scripts.cli:cli'

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
