[tool.poetry]
authors = ["Tomas Gavenciak <gavento@gmail.com>"]
description = "Framework for processes on complex networks: epidemis, game theory, percolation, Ising models. Built on JAX for speed and differentiability."
name = "netprocess"
version = "0.4.2"

[tool.poetry.dependencies]
attrs = "^20.3.0"
colorlog = "^4.1.0"
filelock = "^3.0.12"
h5py = "^3.6.0"
hdf5plugin = "^3.2.0"
jax = "^0.2"
jaxlib = [
  {url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.1.75+cuda11.cudnn805-cp37-none-manylinux2010_x86_64.whl", python = "~3.7"},
  {url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.1.75+cuda11.cudnn805-cp38-none-manylinux2010_x86_64.whl", python = "~3.8"},
  {url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.1.75+cuda11.cudnn805-cp39-none-manylinux2010_x86_64.whl", python = "~3.9"},
  {url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.1.75+cuda11.cudnn805-cp310-none-manylinux2010_x86_64.whl", python = "~3.10"},
]
networkx = "^2.4"
numpy = "^1.18.2"
pandas = "^1.0.3"
plotly = "^4.6.0"
powerlaw = "^1.4.6"
python = "^3.7.10"
pyzstd = "^0.15.0"
tqdm = "^4.45.0"
unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.1"
black = "20.8b1"
flake8 = "^3.8.3"
ipython = "^7.15.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
myst-parser = "^0.15.2"
pre-commit = "^2.7.1"
pytest = "^5.4.1"

[tool.black]
target-version = ['py36']

[tool.poetry.scripts]
netprocess = 'netprocess.scripts.cli:cli'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.1.12"]
